--- a/Honcizek/Views/Cliente/Proyectos/Edit.cshtml
+++ b/Honcizek/Views/Cliente/Proyectos/Edit.cshtml
@@ -114,7 +114,7 @@
             </div>
         </form>
         <div class="pt-3 pl-3">
-            <a asp-controller="Cliente" asp-action="Escritorio">
+            <a asp-controller="ProyectosC" asp-action="Listado">
                 <button class="btn btn-primary">Volver al listado</button>
             </a>
         </div>
