--- a/Honcizek/Views/Programador/Partes/Index.cshtml
+++ b/Honcizek/Views/Programador/Partes/Index.cshtml
@@ -29,7 +29,7 @@
         {
             <span class="text-danger">Este ticket se encuentra finalizado o cancelado</span>
         }
-        <a asp-controller="Tickets" asp-action="Edit" asp-route-id="@ViewData["TicketId"]">
+        <a asp-controller="TicketsP" asp-action="Edit" asp-route-id="@ViewData["TicketId"]">
             <button class="btn btn-primary">
                 Volver al ticket
             </button>
