--- a/Honcizek/Views/Cliente/Tickets/Index.cshtml
+++ b/Honcizek/Views/Cliente/Tickets/Index.cshtml
@@ -6,20 +6,27 @@
 
 <h1>Listado de @(!(bool)ViewData["general"]?"mis tickets pendientes":"todos mis tickets")</h1>
 <div>
-<p class="float-right">
-    <a asp-action="@((bool)ViewData["general"] ? "Listado":"ListadoCompleto")" asp-route-id="@ViewData["suscripcion_id"]">
-        <button class="btn btn-@((bool)ViewData["general"] ? "primary":"warning")">
-            @((bool)ViewData["general"] ? "Ver mis tickets pendientes":"Ver todos los tickets")
-        </button>
-    </a>
-</p>
-<p class="float-right pr-2">
-    <a asp-action="Crear" asp-route-id="@ViewData["suscripcion_id"]">
-        <button class="btn btn-info">
-            Crear nuevo
-        </button>
-    </a>
-</p>
+    <p class="float-right">
+        <a asp-action="@((bool)ViewData["general"] ? "Listado":"ListadoCompleto")" asp-route-id="@ViewData["suscripcion_id"]">
+            <button class="btn btn-@((bool)ViewData["general"] ? "primary":"warning")">
+                @((bool)ViewData["general"] ? "Ver mis tickets pendientes":"Ver todos los tickets")
+            </button>
+        </a>
+    </p>
+    <p class="float-right pr-2">
+        <a asp-controller="SuscripcionesC" asp-action="Ver" asp-route-id="@ViewData["suscripcion_id"]">
+            <button class="btn btn-dark">
+                Volver a la suscripci&oacute;n
+            </button>
+        </a>
+    </p>
+    <p class="float-right pr-2">
+        <a asp-action="Crear" asp-route-id="@ViewData["suscripcion_id"]">
+            <button class="btn btn-info">
+                Crear nuevo
+            </button>
+        </a>
+    </p>
 </div>
 <table class="table">
     <thead>
@@ -115,6 +122,7 @@
     </tbody>
 </table>
 @if (!(Model.Count() > 0))
+
 {
     <h2 style="text-align: center;width: 100%">@((bool)ViewData["general"] ? "Todavia no has creado un ticket":"No tienes tickets pendientes")</h2>
 }
