Arreglado select de mi perfil en cliente

--- a/Honcizek/Views/Cliente/Tickets/Index.cshtml
+++ b/Honcizek/Views/Cliente/Tickets/Index.cshtml
@@ -110,7 +110,7 @@
                         @Html.DisplayFor(modelItem => item.Suscripcion.Nombre)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">
+                        <a asp-action="Ver" asp-route-id="@item.Id">
                             <button class="btn btn-primary">
                                 Ver
                             </button>
