Corregida errata en escritorio y añadidos manuales

--- a/Honcizek/Views/Programador/Escritorio.cshtml
+++ b/Honcizek/Views/Programador/Escritorio.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row col-12 p-5 big botones-escritorio">
     <div class="col-3">
-        <a asp-controller="ProyectosP" asp-action="@(proyectosPersonalizado ? "IndexUsuario":"Index")">
+        <a asp-controller="ProyectosP" asp-action="Index">
             <div class="card card-custom card-stretch gutter-b success-bg">
                 <div class="card-body">
                     <span class=" col-12 card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
@@ -54,7 +54,7 @@
 </div>
 <div class="row col-12 p-5 little botones-escritorio">
     <div class="col-12">
-        <a asp-controller="ProyectosP" asp-action="@(proyectosPersonalizado ? "IndexUsuario":"Index")">
+        <a asp-controller="ProyectosP" asp-action="Index">
             <div class="card card-custom card-stretch gutter-b success-bg">
                 <div class="card-body">
                     <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
