--- a/Honcizek/Views/Administrador/Tickets/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Tickets/Edit.cshtml
@@ -32,7 +32,8 @@
                 </div>
                 <div class="form-group col-4">
                     <label asp-for="SuscripcionId" class="control-label">Suscripci&oacute;n</label>
-                    <select asp-for="SuscripcionId" class="form-control" asp-items="ViewBag.SuscripcionId"></select>
+                    <select readonly asp-for="SuscripcionId" class="form-control" asp-items="ViewBag.SuscripcionId"></select>
+                    
                 </div>
             </div>
 
